--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js"></script>
   <script src="script.js"></script>
-  <script src="draganddrop.js"></script>
+  <script src="external/draganddrop.js"></script>
 </body>
 
 </html>
